--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
     testing functions
-    <script src="main.js"></script>
+    <script src="jasmine/jasmine.js"></script>
+    <script src="test/spec.js"></script>
+    <script src="test/main.js"></script>
+
+
 </body>
 </html>
